# 2.ROS-Basics-Workshop

./: .gitignore  README.md
Launch_file/: launch.md
Launch_file/src/light_robot/launch/: main_file.launch
ROS Introduction And Installation/: ROS_intro.md
ROS Introduction And Installation/source/: ROS installation and setup.md  ros.sh
ROS Launch File/: launch.md
ROS Launch File/src/light_robot/: CMakeLists.txt  package.xml
ROS Launch File/src/light_robot/launch/: main_file.launch  pubsub1.launch
ROS Launch File/src/light_robot/scripts/: subscriber.py
ROS Messages And Topics/ros_topic_and_messages_pkg/script/: publish.py  publish_robot.py  subscribe_robot.py
ROS Messages And Topics/source/: example_custom_message_sensor.md
ROS Messages And Topics/source/task_1_pub_sub/: topic_task.md
ROS Messages And Topics/source/task_2_custom_msg/: msg_task.md
ROS Messages And Topics/source/task_2_custom_msg/custom_msg_task_pkg/: package.xml
ROS Messages and Topics/: ros_topic_and_messages.md
ROS Messages and Topics/chatter_pkg/: CMakeLists.txt  package.xml
ROS Messages and Topics/chatter_pkg/scripts/: listener.py
ROS Messages and Topics/chatter_pkg/src/: listener.cpp
ROS Messages and Topics/ros_topic_and_messages_pkg/: CMakeLists.txt
ROS Messages and Topics/ros_topic_and_messages_pkg/script/: publish_sensor_data.py  subscribe_sensor_data.py
ROS Messages and Topics/ros_topic_and_messages_pkg/src/: publish_robot.cpp  subscribe_robot_data.cpp
ROS Messages and Topics/source/: example_custom_message_robot.md  example_custom_message_sensor.md  exmaple_pub_sub.md
ROS Messages and Topics/source/task_1_pub_sub/: topic_task.md
ROS Messages and Topics/source/task_1_pub_sub/scripts/: 1_task_pub.py
ROS Messages and Topics/source/task_2_custom_msg/: msg_task.md
ROS Messages and Topics/source/task_2_custom_msg/custom_msg_task_pkg/: CMakeLists.txt
ROS Services And Actions/: ros_services_and_action.md
ROS Services And Actions/ros_server_pkg/: package.xml
ROS Services And Actions/ros_server_pkg/script/: server.py
ROS Services And Actions/service_action_examples_package/action/: Countdown.action
ROS Services And Actions/service_action_examples_package/scripts/: countdown_server.py  square_client.py  square_server.py
ROS Services And Actions/service_action_examples_package/src/: countdown_client.cpp  countdown_server.cpp  square_server.cpp
ROS Services And Actions/service_action_examples_package/srv/: Square.srv
ROS Services And Actions/source/: example_action.md  exmaple_custom_services.md
ROS Services And Actions/source/task_custom_action/: Task_action.md
ROS Services And Actions/source/task_custom_action/custom_action_task_pkg/: CMakeLists.txt
ROS Services And Actions/source/task_custom_service/: Task_service.md
ROS Services And Actions/source/task_custom_service/custom_service_task_pkg/: CMakeLists.txt
ROS bags/: bag_file.md
ROS-Messages-and-Topics/: ros_topic_and_messages.md
ROS-Messages-and-Topics/chatter_pkg/: CMakeLists.txt
ROS-Messages-and-Topics/chatter_pkg/src/: talker.cpp  talker.py
ROS-Messages-and-Topics/ros_topic_and_messages_pkg/: CMakeLists.txt  package.xml
ROS-Messages-and-Topics/ros_topic_and_messages_pkg/msg/: Position.msg  SensorData.msg
ROS-Messages-and-Topics/ros_topic_and_messages_pkg/script/: subscribe.py
ROS-Messages-and-Topics/ros_topic_and_messages_pkg/src/: publish_robot_data.cpp  subscribe_robot.cpp
ROS-Messages-and-Topics/source/: example_custom_message_robot.md  example_custom_message_sensor.md  exmaple_pub_sub.md
ROS-Services-and-Actions/: ros_server_and_action.md
ROS-Services-and-Actions/ros_server_pkg/: CMakeLists.txt
ROS-Services-and-Actions/ros_server_pkg/action/: Countdown.action
ROS-Services-and-Actions/ros_server_pkg/script/: countdown_client.py  countdown_server.py
ROS-Services-and-Actions/ros_server_pkg/srv/: MyService.srv
ROS-Services-and-Actions/service_action_examples_package/: CMakeLists.txt  package.xml
ROS-Services-and-Actions/service_action_examples_package/scripts/: countdown_client.py
ROS-Services-and-Actions/service_action_examples_package/src/: square_client.cpp
ROS-Services-and-Actions/source/: example_action.md  exmaple_custom_services.md
ROS-Services-and-Actions/source/task_custom_action/: Task_action.md
ROS_introduction_and_installation/: ROS_intro.md
ROS_introduction_and_installation/scripts/: readme.md  ros.sh
Topic_2/: Topic_2.md
Topic_3/: Topic_3.md
launch_file/: launch.md
rosbag/: bag_file.md
(+14 files in other folders)
